--- a/main.html
+++ b/main.html
@@ -7,7 +7,23 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<main>
+        <ul id="band">
+            <li>The Plot in You</li>
+            <li>The Devil Wears Prada</li>
+            <li>Counterparts</li>
+            <li>Norma Jean</li>
+            <li>Oh, Sleeper</li>
+            <li>Pierce the Veil</li>
+            <li>The Bled</li>
+            <li>Say Anything</li>
+            <li>The Midway State</li>
+            <li>We Came as Romans</li>
+            <li>A Skylit Drive</li>
+            <li>Anywhere But Here</li>
+            <li>An Old Dog</li>
+        </ul>
+    </main>
     <script type="text/javascript" src="./script.js">
 </script>
 
