--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<main>
-        <ul id="band">
+        <ul id="bands">
             <li>The Plot in You</li>
             <li>The Devil Wears Prada</li>
             <li>Counterparts</li>
